Moved math doc from Core/Math to Ravl.API.Math
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@5442 7226f50c-d813-0410-99bf-979b288ab488

--- a/Core/Base/Ravl.API.Core.Math.QInt.html
+++ b/Core/Base/Ravl.API.Core.Math.QInt.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <title>Quick floating point to integer conversions </title>
+    <!--! docentry=Ravl.API.Math.QInt -->
   </head>
 
   <body>
