Added bin and txt suffix options
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@5672 7226f50c-d813-0410-99bf-979b288ab488

--- a/Core/IO/Ravl.API.Core.IO.Type_Converter.html
+++ b/Core/IO/Ravl.API.Core.IO.Type_Converter.html
@@ -72,7 +72,7 @@ but in practice has provided satisfactory behaviour.
 With the use of templating the addition of new conversion can be made
 very easy.  As with processes described earlier only a single function
 need be defined. The following example defines the conversion from
-an interger to a floating point number, (defined as RealT in AMMA),
+an interger to a floating point number, (defined as RealT in RAVL),
 which loses no information and hence has a cost of one.
 
 <P>
