--- a/QMake/Ravl.QMake.Defs.html
+++ b/QMake/Ravl.QMake.Defs.html
@@ -325,19 +325,20 @@ they are available, but ignore them if the are not. This can be achieved by addi
 .opt to the end of the library names, indicating they are optional. For example RavlImgIOV4L would be added as 'RavlImgIOV4L.opt'.
 </DD><P>
 
-      <LI><A NAME="LIBDEPS"></A><B>LIBDEPS</B> 
+<LI><DT><A NAME="EXTERNALLIBS"></A><B>EXTERNALLIBS</B></DT> <DD> It is often useful to include external libraries in a RAVL program or library. 
+To do this QMake must be told where to look for the headers and the library archive.  This is done with a library definition file or .def file.
+An example of one of these can be can be found in <a href="../../../html/Example.def.html">Example.def</a>.  Any number of external definition files
+can be listed and they may be accessed directly by adding there name without the .def extention in USESLIBS,PROGLIBS or TESTLIBS as any other RAVL
+library would.  Adding a library to EXTERNALLIBS automaticly adds the specified libraries to the current directories USESLIBS, and will be treated
+as a normal dependency if a normal RAVL library is also being created.
+</DD><P>
 
-        <p> LIBDEPS is used to define an optional <code>.def</code> file.
-        This file has two possible uses:</p>
+
+      <LI><DT><A NAME="LIBDEPS"></A><B>LIBDEPS</B></DT>
+        <DD>
+        <p> LIBDEPS is used to redefine  the name of the <code>.def</code> file associated with the directory.
+        This has two possible uses:</p>
           <ul>
-            <li> It can be used to explicitly create references to external
-            libraries.  E.g. the following entry in the <code>defs.mk</code>
-            file would create a reference to another library CCMath: <pre>
-            LIBDEPS = CCMath.def</pre> which could then be referenced in the
-            normal way, e.g.: <pre> USESLIBS = CCMath</pre> See <a
-            href="../../../html/Example.def.html">Example.def</a> to see what
-            to put in the <code>.def</code> file. </li>
-           
             <li>
               <p>It is also required where the source for a single library
               spans several directories.  The <code>defs.mk</code> in each
@@ -347,6 +348,16 @@ they are available, but ignore them if the are not. This can be achieved by addi
               automatically.  <b>N.B.</b> The <i>first</i> directory to be
               compiled must contain all the necessary USESLIBS entries for the
               whole library.</p> </li>
+            <li> The second use is deprecated, it was used to explicitly create references to external
+            libraries.  E.g. the following entry in the defs.mk file would
+            create a reference to another library CCMath: 
+              <pre> LIBDEPS = CCMath.def</pre> 
+              which could then be referenced in the normal way, e.g.: 
+              <pre> USESLIBS = CCMath</pre>
+              See <a
+              href="../../../html/Example.def.html">Example.def</a> to see
+              what to put in the <code>.def</code> file.   Note: this only work where the USESLIBS= variable is not defined.
+             </li>
           </ul>
         <p><b>Note:</b> You must <i>not</i> have more than one .def file in a
           directory.</p>
