--- a/Contrib/LibFFmpeg/LibFFmpeg.html
+++ b/Contrib/LibFFmpeg/LibFFmpeg.html
@@ -9,12 +9,12 @@
 
     <p>Use library <code>RavlLibFFmpeg</code></p>
 
-    <p>See <a href="ffmpeg.org">here</a> for more details</p>
+    <p>See <a href="http://ffmpeg.mplayerhq.hu">here</a> for more details</p>
     <hr>
     <address><a href="mailto:w.christmas@surrey.ac.uk">Bill Christmas</a></address>
 <!-- Created: Wed Nov  9 14:45:22 GMT 2005 -->
 <!-- hhmts start -->
-Last modified: Wed Nov  9 14:54:31 GMT 2005
+Last modified: Tue Sep 19 18:34:21 BST 2006
 <!-- hhmts end -->
   </body>
 </html>
