--- a/Contrib/V4L/Ravl.API.Images.Video.Video_IO.Video4Linux.html
+++ b/Contrib/V4L/Ravl.API.Images.Video.Video_IO.Video4Linux.html
@@ -60,7 +60,7 @@
       <li><b>reset</b> Philips webcam. When set, resets the camera to its factory defaults.  </li>
     </ul>
     
-    <p> For more information on control's relating to the philips web cam driver see <a href="http://www.smcc.demon.nl/webcam/api.html">Philips USB webcam API<a>.
+    <p> For more information on control's relating to the philips web cam driver see <a href="http://www.smcc.demon.nl/webcam">Philips USB webcam API<a>.
     </p>
   </body>
 </html>
