--- a/Ravl.Contrib.html
+++ b/Ravl.Contrib.html
@@ -6,15 +6,15 @@
   </head>
 
   <body>
-    <p>The "contrib" package contains classes that are essentially
+    <p>A "contrib" package usually contains classes that are essentially
     wrappers around non-RAVL libraries.  Typically it interfaces to a
     specific piece of hardware or a software package with an
     incompatible license. </p>
 
-    <p>The contrib code is not included within
-    RAVL because of the dependencies on these other libraries.
-    However, once it is installed, the user does not normally notice
-    the difference.  The documentation is merged into the overall RAVL tree.
+    <p>The contrib code is included within RAVL in spite of the dependencies
+    on these other libraries.  However when building RAVL the inclusion of
+    this code can be turned on or off.  The documentation of any included
+    contrib is merged into the overall RAVL tree.
     </p>
      
   </body>
